@@ -1,3 +1,9 @@
+2007-11-24 12:19 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/MeshOEMMViewer3d.java
+	  src/org/jcae/mesh/MeshBoraViewer3d.java: Updated,
+	MeshWriter.writeObject3D() signature has been modified again.
+
 2007-11-23 00:13 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/MeshOEMMViewer3d.java: Updated, DecimateHalfEdge
